<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">WDA</string>
    <string name="what_is_the_purpose">What Is The \nPurpose ?</string>
    <string name="let_us_personalize_your_experience">Let Us Personalize Your \nExperience</string>
    <string name="Continue">Continue</string>
    <string name="what_is_your_name">What Is Your \nName ?</string>
    <string name="enter_your_name_to_get_a_better_experience">Enter Your Name To Get \nA Better Experience</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_name_edit_text">Enter Your Name</string>
    <string name="give_us_your_mobile_number">Give Us Your \nMobile Number</string>
    <string name="enter_your_mobile_number_to_get_on_with_us">Enter Your Mobile Number \nTo Get On With Us</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="verify_your_number_with_otp">Verify Your Number \nWith OTP</string>
    <string name="an_otp_is_sent_on_number_91">An OTP Is Sent On Number \n+91**********</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="set_your_password_nhere">Set Your Password \nHere</string>
    <string name="enter_password">Enter Password</string>
    <string name="add_a_layer_of_security_with_password">Add A Layer Of Security \nWith Password</string>
    <string name="verify">Verify</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="didnt_recived_your_otp_click_here">Didn\'t Received Your OTP ? Click Here</string>
    <string name="_0">0</string>
    <string name="login">Login</string>
    <string name="enter_your_credentials_to_login">Enter Your Credentials To \nLogin</string>
    <string name="already_have_an_account_log_in">Already Have An Account ? Log In</string>
    <string name="no_coding_skill_required">No Coding Skill Required</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="language">Language</string>
    <string name="welcome_nuser">Welcome!! \nUser</string>
    <string name="build_a_nwebsite">Build \nWebsite</string>
    <string name="edit_nwebsite">Edit \nWebsite</string>
    <string name="view_site_nstatus">View Site \nStatus</string>
    <string name="query">Query</string>
    <string name="get_a_website_ready_nin_few_steps">Get A Website Ready \nIn Few Steps</string>
    <string name="create_your_website">Create Your Website</string>
    <string name="name_not_entered">Name not entered</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_details_enter_your_details">Enter Your \nDetails !</string>
    <string name="enter_date_of_incorporation">Enter Date Of Incorporation</string>
    <string name="corporate_identification_number">Corporate Identification Number</string>
    <string name="tax_deduction_account_number">TAX Deduction Account Number</string>
    <string name="enter_your_details_to_get_a_npersonalize_experience" tools:ignore="MissingTranslation">Enter Your Details To Get A \nPersonalize Experience.</string>
    <string name="enter_your_website_name">Enter Your Website Name</string>
    <string name="edit_font">Edit Font</string>
    <string name="cancel">Cancel</string>
    <string name="edit_color">Edit Color</string>
    <string name="save">Save</string>
    <string name="didn_t_register_yet_signup">Didn\'t Register Yet? /Signup.</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="gender">Gender</string>
    <string name="dob">DOB</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="enter_dob">Enter DOB</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_state">Enter State</string>
    <string name="enter_pincode">Enter Pincode</string>
    <string name="cancle">Cancle</string>
    <string name="choose_website">Choose Website</string>
    <string name="enter_your_query">Enter your Query</string>
    <string name="submit">Submit</string>
    <string name="individual">Individual</string>
    <string name="organization">Organization</string>
    <string name="done">Done</string>
    <string name="template_name">template name</string>

    <string-array name="Query">
        <item>text 1</item>
        <item>text 2</item>
        <item>text 3</item>
        <item>text 4</item>
    </string-array>
</resources>