<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayoutOtp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpActivity">
    <ImageView
        android:id="@+id/OtpBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/otpbg" />
    <TextView
        android:id="@+id/TxtOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_number_with_otp"
        android:textSize="29sp"
        android:fontFamily="@font/inter"
        android:textColor="@color/black"
        android:layout_marginTop="75sp"
        android:layout_marginStart="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/SubTxtOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_otp_is_sent_on_number_91"
        android:layout_marginTop="5sp"
        android:layout_marginStart="36sp"
        app:layout_constraintTop_toBottomOf="@+id/TxtOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:autoSizeMinTextSize="18sp"
        app:autoSizeMaxTextSize="100sp"
        android:fontFamily="@font/inter"
        app:autoSizeStepGranularity="2sp"
        />

    <com.noobcode.otpview.OTPView
        android:id="@+id/OtpTxt"
        android:layout_width="0sp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:hint="@string/_0"
        android:inputType="number"
        app:borderThickness="2"
        app:otpLength="6"
        app:spaceBetween="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"


        />
    <Button
        android:id="@+id/ContinueOtp"
        android:layout_width="0sp"
        android:fitsSystemWindows="true"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:fontFamily="@font/inter"
        android:text="@string/verify"
        android:background="@drawable/rectanglesvgbtn"
        android:backgroundTint="@color/purple_700"
        android:paddingBottom="10sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/OtpTxt"
        />
    <TextView
        android:id="@+id/ResendOtpTxt"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:clickable="true"
        android:fontFamily="@font/inter"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/guidelineOtp"
        android:text="@string/didnt_recived_your_otp_click_here"
        app:layout_constraintTop_toBottomOf="@id/ContinueOtp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:focusable="true" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />
</androidx.constraintlayout.widget.ConstraintLayout>