<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">
    <ImageView
        android:id="@+id/LogoWda"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintWidth_percent="0.35"
        android:src="@drawable/wdalogo"
        app:layout_constraintBottom_toTopOf="@id/GifSignup"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/GifSignup"
        android:layout_width="0sp"
        android:layout_height="0sp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintWidth_percent="0.75"
        android:src="@drawable/signupgif"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37" />

    <TextView
        android:id="@+id/SignUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_a_website_ready_nin_few_steps"
        android:textSize="29sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/SignUpBtn"
        app:layout_constraintTop_toBottomOf="@id/GifSignup"
        />

    <TextView
        android:id="@+id/SignUpSubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_coding_skill_required"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SignUpText"
        />

    <Button
        android:id="@+id/SignUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_website"
        android:textAllCaps="false"
        android:background="@drawable/rectanglesvgbtn"
        android:paddingBottom="12sp"
        app:layout_constraintTop_toBottomOf="@id/SignUpSubText"
        app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/LoginBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_log_in"
        android:textSize="15sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/SignUpSubText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>