<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstLayoutSetPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetPasswordActivity">
    <ImageView
        android:id="@+id/SetPasswordBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitEnd"
        android:src="@drawable/setpassword"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="0dp" />
    <TextView
        android:id="@+id/TxtSetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_your_password_nhere"
        android:textSize="29sp"
        android:textColor="@color/black"
        android:layout_marginTop="75sp"
        android:layout_marginStart="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/SubTxtSetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_a_layer_of_security_with_password"
        app:layout_constraintTop_toBottomOf="@+id/TxtSetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:autoSizeMinTextSize="18sp"
        android:textColor="@color/gray"
        app:autoSizeMaxTextSize="100sp"
        app:autoSizeStepGranularity="2sp"
        android:layout_marginTop="5sp"
        android:layout_marginStart="36sp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SetPasswordTxtLayout"
        android:hint="@string/enter_password"
        android:layout_width="0sp"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:layout_marginTop="55sp"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SubTxtSetPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/SetPasswordEditTxt"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:maxLength="8"
            android:maxLines="1"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ConfirmPasswordTxtLayout"
        android:hint="@string/confirm_password"
        android:layout_width="0sp"
        app:passwordToggleEnabled="true"
        app:layout_constraintWidth_percent="0.8"
        android:layout_height="wrap_content"
        android:layout_marginTop="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/SetPasswordTxtLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ConfirmPasswordEditTxt"
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="match_parent"
            android:maxLength="8"
            android:maxLines="1"
            android:layout_gravity="center"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/ContinueSetPassword"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.4"
        android:text="@string/Continue"
        android:fitsSystemWindows="true"
        android:background="@drawable/rectanglesvgbtn"
        android:backgroundTint="@color/purple_700"
        android:paddingBottom="10sp"
        app:layout_constraintBottom_toBottomOf="@id/guidelineSetPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ConfirmPasswordTxtLayout"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        />
</androidx.constraintlayout.widget.ConstraintLayout>